Updated API to Java 17